SFUSA/force-app/main/default/objects/Brand_Allocation__c/fields/Allocation_Used__c.field-meta.xml
<CustomField>
        <fullName>Allocation_Used__c</fullName>
        <formula>IF( Allocation_Per_Interval__c &gt; 0,  Used_Allocations_Per_Interval__c / Allocation_Per_Interval__c, NULL)</formula>
        <label>% Allocation Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>