SFUSA/force-app/main/default/objects/Brand_Allocation__c/fields/Remaining_Allocations__c.field-meta.xml
<CustomField>
        <fullName>Remaining_Allocations__c</fullName>
        <description>SB MC SB-2 to maintain remain Barrel allocation for particular time interval</description>
        <formula>Allocation_Per_Interval__c  -  Used_Allocations_Per_Interval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>