SFUSA/force-app/main/default/objects/Brand_Allocation__c/fields/Status__c.field-meta.xml
<CustomField>
        <fullName>Status__c</fullName>
        <defaultValue>'Active'</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>overlap</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>