SFUSA/force-app/main/default/objects/Brand_Allocation__c/fields/Time_Interval__c.field-meta.xml
<CustomField>
        <fullName>Time_Interval__c</fullName>
        <description>SB-MC-SB-10 To maintain for which time Interval we are providing allocation in Single Barrel</description>
        <label>Time Interval</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Time_Period__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>Quarter 1</fullName>
                </value>
                <value>
                    <fullName>Quarter 2</fullName>
                </value>
                <value>
                    <fullName>Quarter 3</fullName>
                </value>
                <value>
                    <fullName>Quarter 4</fullName>
                </value>
                <value>
                    <fullName>year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>