SFUSA/force-app/main/default/objects/Brand_Allocation__c/fields/Time_Period__c.field-meta.xml
<CustomField>
        <fullName>Time_Period__c</fullName>
        <description>SB-MC-SB-10 To maintain Time period according to which we will provide allocation process</description>
        <label>Time Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>