SFUSA/force-app/main/default/objects/Brand_Allocation__c/fields/Used_Allocations_Per_Interval__c.field-meta.xml
<CustomField>
        <fullName>Used_Allocations_Per_Interval__c</fullName>
        <description>SB-MC-SB-10 To maintain quantity of Barrel used in Single Barrel for a particular time period</description>
        <label>Used Allocations Per Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>