SFUSA/force-app/main/default/objects/Brand_Allocation__c/listViews/Cruzan_SB_Brand_Allocation.listView-meta.xml
<ListView>
        <fullName>Cruzan_SB_Brand_Allocation</fullName>
        <filterScope>Queue</filterScope>
        <label>Cruzan SB</label>
        <queue>Cruzan_SB</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>